--- a/foundations/01-css-methods/my-solution.css
+++ b/foundations/01-css-methods/my-solution.css
@@ -1,5 +1,9 @@
 div {
     background-color: red;
     color: white;
+    font-weight: bold;
+    text-align: center;
+    font-size: 32px;
     
 }
+
